--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>test mise en page avec les CSS</title>
+	<title>Ripeaux pierre-Alban cour git</title>
 	<style type="text/css">
 		* {margin: 0; padding: 0; box-sizing: border-box;}
-		header { background-color: yellow; width:100%;height: 200px;}
+		header { background-color: yellow; width:100%;height: 80px;}
 		nav {background-color: orange;width: 100%;height: 60px;}
-		main  {background-color: lightblue;float: left;width: 70%}
+		main  {background-color: lightblue;float: right;width: 80%}
 		section { padding: 10px }
 		article {}
-		aside {background-color: lime; float: left;width: 30%}
+		aside {background-color: lime; float: left;width: 20%}
 		footer {background-color: grey; clear: both;width: 100%; height: 60px; }
 
 		#container { background-color: gold; width:  500px; margin: 0 auto;}
@@ -23,7 +23,7 @@
 <body>
 
 
-	<header>header</header>
+	<header>Ripeaux pierre-Alban cour git</header>
 		<nav>navigation </nav>
 		<div id="container">
 
@@ -33,23 +33,64 @@
 		<h1>Bienvenue liser tout!</h1>
 	
 	<section>
-	 <article><h3>Article 1</h3></article>
+	 <article><h3>Travail #1 : Synthétisez, que font les commandes ls, cd, pwd, rm, mkdir, rmdir, touch, cat ?</h3></article>
 
-	 <p> La rentrée 2020 approche, et le Cnam reste plus que jamais mobilisé pour répondre aux attentes de ses nombreux publics. C'est ainsi que des équipes pédagogiques de l'établissement public et des centres en région organisent des sessions d'information en présentiel ou à distance. Objectif : vous accompagner pour préparer votre avenir. N'hésitez pas à nous rejoindre </p>
+	 <p><B>Ls</B> : La commande ls affiche le contenu d’un répertoire. Si aucune option n’est fourni à la commande ls, cette dernière affiche le contenu du répertoire courant.</p>
+
+	<p><B>Cd</B> : CD (Change Directory) est une commande permettant de basculer entre les répertoires dans MS-DOS .</p>
+	
+	<p><B>Pwd</B> : pwd est une commande UNIX. Son nom signifie en anglais « print working directory ». Elle permet d'afficher le chemin d'accès vers le répertoire où se situe l'utilisateur qui a entré la commande.</p>
+	
+	<p><B>Rm</B> : La commande rm permet de supprimer un ou plusieurs fichiers d'un répertoire, ainsi que de supprimer des répertoires.</p>
+	
+	<p><B>Mkdir</B> : mkdir (make directories) permet de créer des répertoires.</p>
+	
+	<p><B>Rmdir</B> : Rmdir permet de supprimer des répertoires.</p>
+	
+	<p><B>Touch</B> : La commande touch sert avant tout à mettre à jour la date et l'heure d’accès pour la dernière modification d'un ou plusieurs fichier selon la date actuelle. La commande touch permet aussi de créer un fichier texte vide.</p>
+	
+	<p><B>Cat</B> : cat sert à lire un contenu textuel d’un fichier texte</p>
+
 		
 
 	</section>
 		<section>
-	 <article><h3> Article 2</h3></article>
+	 <article><h3> Devoir #2 : Veuillez décrire le wokflow basique avec Git (liste des commandes surtout)</h3></article>
 
-	 	 <p> La rentrée 2020 approche, et le Cnam reste plus que jamais mobilisé pour répondre aux attentes de ses nombreux publics. C'est ainsi que des équipes pédagogiques de l'établissement public et des centres en région organisent des sessions d'information en présentiel ou à distance. Objectif : vous accompagner pour préparer votre avenir. N'hésitez pas à nous rejoindre </p>
+	 	 <p> Ma sources vient du document <a href="https://jackguitar.com/cnam/git-01.html">de classe</a> mais aussi <a href="https://gist.github.com/aquelito/8596717">du site</a></p>
+
+	 	 <p>Dans ce document voila toute les commande qu'on a utiliser :</p>
+<p>git status</p>
+<p>git diff</p>
+<p>git add a.txt</p>
+<p>git status</p>
+<p>git commit -m "Premier commit"</p>
+<p>git status</p>
+<p>git log --stat</p>
+<p> Nous avons crée un fichier texte puis on la associer a un commit, on la ensuite fait cela une seconde fois avec un autre fichier texte et un autre commit.</p>
+
 		
 
 	</section>
 		<section>
-	 <article><h3> Article 3</h3></article>
+	 <article><h3> Devoir #3 : Veuillez décrire le wokflow de modification et de mise en ligne de fichiers avec Git (liste des commandes)</h3></article>
 
-	 	 <p> La rentrée 2020 approche, et le Cnam reste plus que jamais mobilisé pour répondre aux attentes de ses nombreux publics. C'est ainsi que des équipes pédagogiques de l'établissement public et des centres en région organisent des sessions d'information en présentiel ou à distance. Objectif : vous accompagner pour préparer votre avenir. N'hésitez pas à nous rejoindre </p>
+	 	 <p>Nous avons utiliser les code:</p>
+<p>cd cours-git/</p>
+<p>git status</p>
+<p>git log</p>
+<p>git pull</p>
+<p>git status</p>
+<p>git log</p>
+
+<p>git status</p>
+<p>git push</p>
+<p>git log –graph</p>
+
+<p>Dans les grandes lignes nous avons importer et synchroniser les fichier locaux avec les fichier en ligne. Puis nous avons modifier du fichier local pour envoyer au fichier en ligne.</p>
+
+
+
 		
 
 	</section>
